--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,12 @@
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 //@import "~sweetalert2";
 
+.side-nav{
+    position: sticky;
+    top: 3rem;
+    display: block !important;
+    height: calc(100vh - 10rem);
+    padding-left: .25rem;
+    margin-left: -.25rem;
+    overflow-y: auto;
+}
